<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <ImageView
        android:id="@+id/img_detail_movie_poster"
        android:layout_width="144dp"
        android:layout_height="216dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/movies"
        android:scaleType="fitXY"
        android:src="@drawable/poster_venom"
        android:transitionName="@string/movie_poster_transition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_detail_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="@string/movie_title_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_detail_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/img_detail_movie_poster"
        tools:text="Venom" />

    <TextView
        android:id="@+id/tv_detail_movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_detail_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/lipsum" />


    <TextView
        android:id="@+id/tv_detail_runtime"
        style="@style/TextSpec.Field"
        android:layout_width="69dp"
        android:layout_height="19dp"
        android:text="@string/runtime"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_runtime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_detail_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_movie_runtime" />

    <TextView
        android:id="@+id/tv_detail_movie_runtime"
        style="@style/TextSpec.Value"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_movie_poster"
        tools:text="1m 2h" />

    <TextView
        style="@style/TextSpec.Field"
        android:text="@string/user_score"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_runtime"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_runtime" />

    <TextView
        android:id="@+id/tv_detail_movie_score"
        style="@style/TextSpec.Value"
        android:layout_width="0dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_movie_runtime"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_runtime"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_runtime"
        tools:text="20%" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_button"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

</android.support.constraint.ConstraintLayout>