<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="11dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_item_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="7dp"

            card_view:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/img_item_movie_poster"
                android:layout_width="72dp"
                android:layout_height="108dp"
                android:scaleType="fitXY"
                android:src="@drawable/poster_venom"
                android:transitionName="@string/movie_poster_transition" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_item_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/card_item_movie_poster"
            android:layout_toRightOf="@id/card_item_movie_poster"
            android:textSize="24sp"
            android:textStyle="bold"
            android:transitionName="@string/movie_title_transition"
            tools:text="Venom" />

        <TextView
            android:id="@+id/tv_item_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_item_movie_title"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/card_item_movie_poster"
            android:layout_toRightOf="@id/card_item_movie_poster"
            android:ellipsize="end"
            android:maxLines="4"
            tools:text="@string/lipsum" />
    </RelativeLayout>


</android.support.v7.widget.CardView>